# ctreeskit

./: README.md  pyproject.toml  requirements.txt  xr_module.md
.github/workflows/: tests.yml
docs/: arraylake_tools.md  xr_analyzer.md
src/ctreeskit/: __init__.py
src/ctreeskit/arraylake_tools/: common.py  create.py  initialize.py  populate_dask.py
src/ctreeskit/arraylake_tools/datasets_config/: categorical_raster_wtih_x_y_time.json
src/ctreeskit/dask_analyzer/: __init__.py  dask_calc_categorical_area_stats.py  dask_create_area_ds_from_degrees.py  dask_geometry_clip_rio.py  dask_reproj_match.py
src/ctreeskit/xr_analyzer/: __init__.py  common.py  multipolygon_test.geojson  xr_common.py  xr_exact_extract.py  xr_geometry_processor.py  xr_spatial_processor.py  xr_spatial_processor_module.py  xr_zonal_stats.py  xr_zonal_stats_module.py  xr_zonal_stats_v2.py
tests/: __init__.py  test_spatial_processor.py  test_zonal_stats.py
